--- a/style.css
+++ b/style.css
@@ -15,19 +15,6 @@ body {
     position: relative;
 }
 
-#editButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 10px;
-    font-size: 14px;
-    cursor: pointer;
-    border: none;
-    background-color: #4caf50;
-    color: white;
-    border-radius: 5px;
-}
-
 #spinButton {
     margin-top: 20px;
     padding: 10px 20px;
@@ -45,8 +32,19 @@ body {
     font-weight: bold;
 }
 
-/* Style pour le popup */
-#popup {
+.top-right {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px;
+    background-color: #555;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -58,34 +56,19 @@ body {
     align-items: center;
 }
 
-.hidden {
-    display: none;
-}
-
 .popup-content {
     background: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    text-align: left;
-    width: 300px;
+    text-align: center;
 }
 
-.popup-content h3 {
-    margin-top: 0;
+.hidden {
+    display: none;
 }
 
-#prizeList {
-    list-style: none;
-    padding: 0;
-    margin: 10px 0;
-}
-
-#prizeList li {
-    margin-bottom: 10px;
-}
-
-#prizeList input {
-    width: 100%;
+form input {
+    margin: 5px 0;
     padding: 5px;
+    width: calc(100% - 20px);
 }
