--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-image: url('Roue Noel.jpg'); /* Assurez-vous d'avoir l'image de fond correcte */
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
