--- a/style.css
+++ b/style.css
@@ -1,119 +1,19 @@
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
     background: url('Roue Noel.jpg') no-repeat center center fixed;
     background-size: cover;
-    font-family: Arial, sans-serif;
-}
-
-.container {
-    text-align: center;
-    position: relative;
-}
-
-.wheels-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 50px;
-}
-
-.wheel {
-    text-align: center;
-    flex: 1;
-    margin: 0 10px;
-}
-
-#spinButton1, #spinButton2, #spinButton3 {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    background-color: #ff6666;
-    color: white;
-    border-radius: 5px;
-}
-
-#result1, #result2, #result3 {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 10px;
-    border: 2px solid #000;  /* Bordure noire autour du texte */
-    border-radius: 5px;      /* Coins arrondis pour un effet plus esthétique */
-    background-color: #ffeb3b; /* Fond jaune clair pour le texte */
-    text-align: center;      /* Centrer le texte */
-    width: 200px;            /* Largeur fixe pour uniformiser les résultats */
-}
-
-.top-right {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px;
-    background-color: #555;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.hidden {
-    display: none;
-}
-
-.popup-section {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-.popup-left, .popup-right {
-    width: 45%;
-}
-
-form input {
-    margin: 5px 0;
-    padding: 5px;
-    width: calc(100% - 20px);
 }
 
 button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
+    background-color: #FF0000; /* Rouge Noël */
+    color: #FFFFFF;
     border-radius: 5px;
-    cursor: pointer;
 }
 
+.popup-content {
+    background: #00FF00; /* Vert Noël */
+}
+
+canvas {
+    border: 3px solid #FFFFFF;
+    border-radius: 50%;
+}
